--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 /dist
 /tmp
 /out-tsc
-
 # dependencies
 /node_modules
 
@@ -18,11 +17,7 @@
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
 
 # misc
 /.sass-cache
