--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "@nrwl/cypress": "10.3.1",
     "@nrwl/eslint-plugin-nx": "10.3.1",
     "@nrwl/jest": "10.3.1",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-cloud": "^10.1.9",
     "@nrwl/workspace": "10.3.1",
     "@types/jest": "26.0.8",
     "@types/node": "~8.9.4",
